syntax = "proto3";
 
package HealthCheck;

import "./CommonObjects.proto";
 
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }

  ServingStatus status = 1;
}
 
service HealthCheck {
  rpc Check(EmptyObject) returns (HealthCheckResponse);
}